--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         #left-panel-input { width: 100%; height: 50%; }
         #left-panel-output { width: 100%; height: 50%; }
         #csv-input { width: 100%; height: 90%; }
-        #geojson-output { width: 100%; height: 90%; }
+        #geojson-output { width: 100%; height: 85%; }
+        #download-geojson { margin-bottom: 20px; }
     </style>
     <body>
         <div id="left-panel">
@@ -27,6 +28,7 @@
 48.390394,-4.486076,25,Brest</textarea>
             </div>
             <div id="left-panel-output">
+                <button id="download-geojson" type="button" onclick="downloadGeojson()">Download GeoJSON output file</button>
                 <textarea id="geojson-output" name="geojson-output" rows="5" cols="33" placeholder="Geojson output"></textarea>
             </div>
         </div>
@@ -40,12 +42,27 @@
                 maxZoom: 20,
             }).addTo( map );
 
+            const downloadGeojson = () => {
+                var pom = document.createElement('a');
+                pom.setAttribute( 'href', 'data:text/plain;charset=utf-8,' + encodeURIComponent( JSON.stringify( geojsonCollection, null, 2 ) ) );
+                pom.setAttribute( 'download', "circles.geojson" );
+
+                if ( document.createEvent ) {
+                    var event = document.createEvent( 'MouseEvents' );
+                    event.initEvent( 'click', true, true );
+                    pom.dispatchEvent( event );
+                }
+                else {
+                    pom.click();
+                }
+            };
+
             const getInput = () => {
                 return document.getElementById( "csv-input" ).value;
             };
 
             const setOutput = () => {
-                return document.getElementById( "geojson-output" ).value = JSON.stringify( geojsonCollection, null, 4 );
+                return document.getElementById( "geojson-output" ).value = JSON.stringify( geojsonCollection, null, 2 );
             };
 
             const csvToGeojson = ( csvData, separator ) => {
