--- a/converter.html
+++ b/converter.html
@@ -33,7 +33,7 @@
                     3 - Copy / Past the output array of coordinates in the first field
                 </div>
                 <div>
-                    4 - Copy / Past from last field to check the output geometry (FeatureCollection) on website : <a href="geojson.io" style="margin-bottom: 20px;">http://geojson.io/</a>
+                    4 - Copy / Past from last field to check the output geometry (FeatureCollection) on website : <a href="http://geojson.io" style="margin-bottom: 20px;">geojson.io</a>
                 </div>
                 <div>
                     5 - Download your GeoJSON file
