--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <style>
         body { display: flex; margin: 0px; }
-        #mapid { width: 75%; height: 100%; }
+        #mapid { width: 75%; height: auto; }
         #left-panel { width: 25%; height: 100%; margin: 10px; }
         #left-panel-input { width: 100%; height: 50%; }
         #left-panel-output { width: 100%; height: 50%; }
